-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9.2
-
None
-
-
853b15cc0 (dev), df2ee9917 (6.10), 446765c37 (6.9), bb3a3352e (tqtc/lts-6.8)
Compilation error for Windows 32 bit
F:/Opt/Qt/6.9.2/Src/qtmultimedia/src/multimedia/windows/qwmf_support_p.h(63): error C2398: Element '2': conversion from 'DWORD' to 'qsizetype' requires a narrowing conversion
possible fix
if constexpr (std::is_void_v<IMFBufferReaderReturnType<Functor>>) { f(QSpan{ data, qsizetype(currentLength) }, QSpan{ data, qsizetype(maxLength) }); return {}; } else return f(QSpan{ data, qsizetype(currentLength) }, QSpan{ data, qsizetype(maxLength) });
For Gerrit Dashboard: QTBUG-139549 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
671047,3 | wmf support: 32bit compile fix | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
671474,2 | wmf support: 32bit compile fix | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
671547,2 | wmf support: 32bit compile fix | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
671737,2 | wmf support: 32bit compile fix | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |