wmf support: 32bit compile fix

we need to narrow DWORD to qsizetype explicitly to compile on 32bit
windows.

Fixes: QTBUG-139549
Pick-to: 6.9 6.8
Change-Id: Ie536e414bd5391cf041ec55cc9d96f5f25a1b540
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 853b15cc0ab4f0a145271a15f6c5e91a98da90fd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>